<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.bioinfo</groupId>
    <artifactId>babelomics</artifactId>
    <version>0.6.0</version>
    <dependencies>
        <dependency>
            <groupId>org.bioinfo</groupId>
            <artifactId>bioinfo-mlpr</artifactId>
            <version>0.6.0</version>
        </dependency>
        <dependency>
            <groupId>org.bioinfo</groupId>
            <artifactId>bioinfo-math</artifactId>
            <version>0.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.bioinfo</groupId>
            <artifactId>bioinfo-tool</artifactId>
            <version>0.9.0</version>
        </dependency>
        <dependency>
            <groupId>org.bioinfo</groupId>
            <artifactId>bioinfo-graphics</artifactId>
            <version>0.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.bioinfo</groupId>
            <artifactId>infrared-lib</artifactId>
            <version>1.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.bioinfo</groupId>
            <artifactId>bioinfo-io-file</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>es.blast2go</groupId>
            <artifactId>blast2go</artifactId>
            <version>babel2</version>
        </dependency>
        <dependency>
            <groupId>jdom</groupId>
            <artifactId>jdom</artifactId>
            <version>1.1</version>
        </dependency>
        <dependency>
            <groupId>org.bioinfo</groupId>
            <artifactId>bioinfo-microarray</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.bioinfo</groupId>
            <artifactId>bioinfo-networks</artifactId>
            <version>0.2.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.bioinfo</groupId>
            <artifactId>bioinfo-validation</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>smadeira</groupId>
            <artifactId>smadeira</artifactId>
            <version>2.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-client</artifactId>
            <version>1.18.3</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-core</artifactId>
            <version>1.8</version>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey.contribs</groupId>
            <artifactId>jersey-multipart</artifactId>
            <version>1.8</version>
        </dependency>
        <!--<dependency>-->
        <!--<groupId>org.glassfish.jersey.core</groupId>-->
        <!--<artifactId>jersey-client</artifactId>-->
        <!--<version>2.14</version>-->
        <!--</dependency>-->

        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-core-asl</artifactId>
            <version>1.9.13</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>2.4.4</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.4.4</version>
        </dependency>

    </dependencies>
    <build>
        <sourceDirectory>src/main</sourceDirectory>
        <testSourceDirectory>src/test</testSourceDirectory>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>org.bioinfo.babelomics.BabelomicsMain</mainClass>
                            <addClasspath>true</addClasspath>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.9</version>
                <configuration>
                    <!-- Set the target configuration directory to be used in the bin scripts -->
                    <configurationSourceDirectory>conf</configurationSourceDirectory>
                    <configurationDirectory>conf</configurationDirectory>
                    <copyConfigurationDirectory>true</copyConfigurationDirectory>

                    <binFolder>bin</binFolder>

                    <assembleDirectory>${project.build.directory}/babelomics</assembleDirectory>
                    <extraJvmArguments>-Xms64m -Xmx6144m -XX:MaxPermSize=6144m -Xss50M -Djava.net.preferIPv4Stack=true</extraJvmArguments>
                    <platforms>
                        <platform>unix</platform>
                    </platforms>
                    <programs>
                        <program>
                            <mainClass>org.bioinfo.babelomics.BabelomicsMain</mainClass>
                            <id>babelomics</id>
                        </program>
                    </programs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <repository>
            <id>default</id>
            <name>MyCo External Repository</name>
            <url>scp://repos/var/local/commons/repository</url>
        </repository>
    </distributionManagement>
</project>
